--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@sequential-desktop/api-client",
+  "name": "@sequential/desktop-api-client",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.js",
+  "exports": {
+    ".": "./src/index.js"
+  },
   "files": ["src", "dist"],
   "description": "API client for Sequential-OS operations",
   "keywords": ["sequential-desktop", "api-client", "sequential-os"],
